<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:srcCompat="@drawable/ceyran" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metin3"
        android:textSize="25sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metin4"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metin6" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metin7" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/kwh_icon"

        android:ems="10"
        android:hint="Gündüz(kwh) degerini giriniz "
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/kwh_icon"
        android:ems="10"
        android:hint="Gece(kwh) degerini giriniz "
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="Hesapla" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Açıklama :"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metin5" />
</LinearLayout>